# sta

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: cli.rs  main.rs  stats.rs
