[package]
authors = ["kongo2002 <kongo2002@gmail.com>"]
homepage = "https://github.com/kongo2002/sta"
repository = "https://github.com/kongo2002/sta"
description = "Command line utility to output a text histogram"
name = "sta"
version = "1.1.0"
edition = "2021"

[dependencies]
argh = "0.1.10"
tabular = "0.2.0"
